Updates Doctor model, set's fixed uuid's
Add's full doctor crud
