# swagger_output.json
@@ -5,7 +5,7 @@
     "title": "Appointments API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "appointments-api-ur36.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "tags": [
     {
@@ -14,6 +14,7 @@
     }
   ],
   "schemes": [
+    "http",
     "https"
   ],
   "securityDefinitions": {
@@ -438,6 +439,119 @@
             "description": "Problemas com o servidor."
           }
         }
+      },
+      "post": {
+        "tags": [
+          "Doctors"
+        ],
+        "description": "Endpoint para criar um médico.",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "Doctor",
+            "in": "body",
+            "description": "Adicionando um novo médico.",
+            "schema": {
+              "$ref": "#/definitions/AddDoctor"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Médico cadastrado."
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Problemas com o servidor."
+          }
+        }
+      }
+    },
+    "/doctors/{id}": {
+      "put": {
+        "tags": [
+          "Doctors"
+        ],
+        "description": "Endpoint para atualizar um médico.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Id do médico"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Atualizando um médico.",
+            "schema": {
+              "$ref": "#/definitions/AddDoctor"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Médico atualizado com sucesso."
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Problemas com o servidor."
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Doctors"
+        ],
+        "description": "Endpoint para remover um medico.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Id do médico"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Médico removido com sucesso."
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Problemas com o servidor."
+          }
+        }
       }
     }
   },
@@ -486,6 +600,10 @@
         "name": {
           "type": "string",
           "example": "Fulano de Tal"
+        },
+        "role": {
+          "type": "string",
+          "example": "USER"
         }
       }
     },
@@ -530,6 +648,22 @@
           "type": "string",
           "example": "12345678"
         },
+        "photoUrl": {
+          "type": "string",
+          "example": "https://example.com/photo.jpg"
+        },
+        "hospital": {
+          "type": "string",
+          "example": "Santa casa"
+        },
+        "address": {
+          "type": "string",
+          "example": " Rua 1, 123, Centers, São Paulo, SP, Brasil"
+        },
+        "modalty": {
+          "type": "string",
+          "example": "online"
+        },
         "appointments": {
           "type": "array",
           "items": {
@@ -545,6 +679,39 @@
               }
             }
           }
+        }
+      }
+    },
+    "AddDoctor": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "Victor Schwartz"
+        },
+        "specialty": {
+          "type": "string",
+          "example": "Cardiologista"
+        },
+        "CRM": {
+          "type": "string",
+          "example": "12345678"
+        },
+        "hospital": {
+          "type": "string",
+          "example": "Santa casa"
+        },
+        "address": {
+          "type": "string",
+          "example": " Rua 1, 123, Centro, São Paulo, SP, Brasil"
+        },
+        "modalty": {
+          "type": "string",
+          "example": "online"
+        },
+        "photoUrl": {
+          "type": "string",
+          "example": "https://example.com/photo.jpg"
         }
       }
     },
@@ -566,6 +733,10 @@
         "CRM": {
           "type": "string",
           "example": "12345678"
+        },
+        "photoUrl": {
+          "type": "string",
+          "example": "https://example.com/photo.jpg"
         }
       }
     },
